--- a/home/style.css
+++ b/home/style.css
@@ -412,7 +412,11 @@ body {
 }
 
 .nav {
+    display: flex;
   flex-direction: column;
+    align-items: Center;
+    gap: 12px;
+    padding: 10px 0;
 }
 
 /* Tablets */
@@ -428,4 +432,5 @@ body {
     font-size: 18px;
   }
 }
+
 
