--- a/styles.css
+++ b/styles.css
@@ -504,7 +504,7 @@ body {
     transform: translateY(-10px);
 }
 
-.staff-avatar {
+.staff-avatar img {
     width: 100px;
     height: 100px;
     border-radius: 50%;
